# QtViewDemo

./: CMakeLists.txt  LICENSE  README.md  main.cpp
list_view/: CMakeLists.txt  ColorItemDelegate.cpp  ColorItemDelegate.h  ColorItemModel.cpp  ColorItemModel.h  ColorListView.cpp  ColorListView.h
tree_view/: CMakeLists.txt  UrlItem.cpp  UrlItem.h  UrlItemDelegate.cpp  UrlItemDelegate.h  UrlItemModel.cpp  UrlItemModel.h  UrlTreeView.cpp  UrlTreeView.h
